Fixed overlapping buttons in the template container (#4)
* Fixed iOS event not properly closing the calendar.

* Fixed iOS calendar bug.

* Yet another fix that solves a doubleclick issue.

* Final fix for the iOS calendar bug

* Updated dist folder with latest builds. Added general css for the new x button.

* Fixed overlapping buttons in the template container.

* Fixed previous commit.

--- a/app/styles/style.less
+++ b/app/styles/style.less
@@ -35,6 +35,8 @@
   }
   &.dropdown-menu .close span:hover { background: none; }
 
+  .template-container { padding-top: 15px; }
+
   .user-select(none);
   .border-radius(4px);
 
